--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,11 @@ Flask-Cors==4.0.1
 requests==2.32.5
 python-dotenv==1.1.1
 gunicorn==23.0.0
+
+# .msg 添付抽出用
+extract-msg==0.50.8
+olefile==0.47
+
+# Excel 触るなら（任意）
+openpyxl==3.1.5
+
