--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,9 @@ requests==2.32.5
 python-dotenv==1.1.1
 gunicorn==23.0.0
 
-# .msg 添付抽出用
-extract-msg==0.50.8
+# .msg 添付抽出
+extract-msg==0.55.0
 olefile==0.47
 
-# Excel 触るなら（任意）
-openpyxl==3.1.5
-
+# （将来 .xlsx を読むとき用・任意）
+# openpyxl==3.1.5
